--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&family=Roboto:wght@400;500&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    
+    <h1>FizzBuzzDOM</h1>
+    <div class="container">
+
+    </div>
+    <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
